--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-activity": "^2.0.1",
     "react-dom": "^17.0.2",
+    "react-full-screen": "^1.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
